public/style.css
body {
  padding: 0;
  margin: 0 auto;
  max-width: 1156px;
}

.product-header {
  display: flex;
  align-items: start;
}

.product-header > img:first-of-type {
  flex: 0 0 40%;
}

#root {
  flex: 1;
}

#root > div > div > div {
  width: 100%;
}

.product-header > img:last-of-type {
  flex: 0 0 283px;
}

.review-section {
  display: flex;
  align-items: start;
}


#app {
  margin: 20px;
}


#review-service {
  flex: 1;
  margin-top: 26px;
  margin-right: 32px;
}

